Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.0
-
None
-
Windows 7, Qt 4.8.0, Visual Studio 2010 prof (SP1)
Description
using
QMAKE_LFLAGS_DEBUG+=/MANIFEST:NO
in a .pro-file doesn't work for VS 2010
with the following patch it will work
patch_msbuild_objectmodel.cpp
--- d:\qt\4.8.0.org\qmake\generators\win32\msbuild_objectmodel.cpp 2011-12-08 07:06:02.000000000 +0100 +++ d:\qt\4.8.0\qmake\generators\win32\msbuild_objectmodel.cpp 2012-01-06 21:09:20.000000000 +0100 @@ -656,13 +656,18 @@ if ( tool.SingleProjects.at(i).Configuration.linker.LinkIncremental != linkIncrementalDefault) { const triState ts = (tool.SingleProjects.at(i).Configuration.linker.LinkIncremental == linkIncrementalYes ? _True : _False); xml << tag("LinkIncremental") << attrTag("Condition", QString("'$(Configuration)|$(Platform)'=='%1'").arg(tool.SingleProjects.at(i).Configuration.Name)) << valueTagT(ts); } - + const triState ts = tool.SingleProjects.at(i).Configuration.linker.GenerateManifest; + if( ts != unset ) { + xml << tag("GenerateManifest") + << attrTag("Condition", QString("'$(Configuration)|$(Platform)'=='%1'").arg(tool.SingleProjects.at(i).Configuration.Name)) + << valueTagT(ts); + } if ( tool.SingleProjects.at(i).Configuration.preBuild.ExcludedFromBuild != unset ) { xml << tag("PreBuildEventUseInBuild") << attrTag("Condition", QString("'$(Configuration)|$(Platform)'=='%1'").arg(tool.SingleProjects.at(i).Configuration.Name)) << valueTagT(!tool.SingleProjects.at(i).Configuration.preBuild.ExcludedFromBuild); }